# ChunkViewer

./: LICENSE  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
src/: App.css  App.tsx  Content.css  Content.tsx  colors.css  main.css  main.tsx  test.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns  icon.psd
src-tauri/src/: main.rs  show_in_folder.rs
src/components/: StrictModeDroppable.tsx
src/components/Chunk/: Chunk.css  Chunk.tsx
src/components/ChunkContainer/: ChunkContainer.css  ChunkContainer.tsx
src/components/ChunkParams/: ChunkParams.css  ChunkParams.tsx
src/components/Expandable/: Expandable.css  Expandable.module.css  Expandable.tsx
src/components/ExpandableBlock/: ExpandableBlock.tsx
src/components/ExpandableGroup/: ExpandableGroup.module.css  ExpandableGroup.tsx
src/components/FeaturesContainer/: ChunkExtensionsList.css  ChunkExtensionsList.tsx  ChunkInfoExtensionDialog.css  ChunkInfoExtensionDialog.tsx  FeaturesContainer.css  FeaturesContainer.tsx  FeaturesContainerAddExtensionDialog.css
src/components/ImageContainer/: ImageContainer.css  ImageContainer.tsx
src/components/MySelect/: MySelect.css  MySelect.tsx
src/components/ParamsTable/: ParamsTable.css  ParamsTable.module.css  (+1 more)
src/scripts/: ScrollStateSaver.ts  binary.utils.ts  chunkExporter.ts  chunkHandler.ts  chunkReader.ts  chunkSaver.ts  event.ts  features.ts  ffs.ts  frontend.utils.ts  save.utils.ts  sdParamParser.ts  settings.ts  utils.ts  variableStore.ts
src/styles/: selectStyle.ts
src/svg/: close-bold.tsx
(+47 files in other folders)
