[package]
name = "png_chunk_viewer"
version = "0.8.5"
description = "A Tauri App"
authors = ["Neo", "CompleX"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.0", features = [] }

[dependencies]
tauri = { version = "1.5.0", features = ["cli", "devtools", "dialog-message", "dialog-open", "dialog-save", "protocol-asset", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
fstream = "0.1.2"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
